feat: rabbitmq configuration and logic to update status